// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkbox/presenters/CheckboxPresenter renders with all props 1`] = `
<div
  className="hig__checkbox hig__checkbox--checkbox hig__checkbox--required hig__checkbox--checked"
>
  <input
    checked={true}
    className="hig__checkbox__input"
    disabled={true}
    id={undefined}
    name="checkbox"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    type="checkbox"
    value="value"
  />
  <span
    className="hig__checkbox__wrapper hig__checkbox__wrapper--checked hig__checkbox__wrapper--disabled"
  >
    <svg
      className="hig__checkbox__wrapper__check"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3z"
      />
    </svg>
    <svg
      className="hig__checkbox__wrapper__check--indeterminate"
      height="2"
      viewBox="0 0 8 2"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Rectangle 11
      </title>
      <path
        d="M0 0h8v2H0z"
        fill="#FFF"
        fillRule="evenodd"
      />
    </svg>
    <svg
      className="hig__checkbox__wrapper__check--disabled"
      height="8"
      viewBox="0 0 10 8"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Group 4
      </title>
      <path
        d="M3.95 7.588L1 4.743l.915-.946 2.02 1.935L8.537 1l.933.928z"
        fill="#D1DDEE"
        fillRule="evenodd"
        stroke="#D1DDEE"
        strokeWidth=".5"
      />
    </svg>
  </span>
  <label
    className="hig__checkbox__label"
    htmlFor={undefined}
  >
    HELLO
  </label>
</div>
`;

exports[`checkbox/presenters/CheckboxPresenter renders without props 1`] = `
<div
  className="hig__checkbox hig__checkbox--checkbox"
>
  <input
    checked={false}
    className="hig__checkbox__input"
    disabled={false}
    id="checkbox-1"
    name="checkbox"
    onBlur={undefined}
    onChange={undefined}
    onClick={undefined}
    onFocus={undefined}
    type="checkbox"
    value="value"
  />
  <span
    className="hig__checkbox__wrapper"
  >
    <svg
      className="hig__checkbox__wrapper__check"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M6.2 12L2 8.1l1.3-1.3 2.9 2.7L12.7 3 14 4.3z"
      />
    </svg>
    <svg
      className="hig__checkbox__wrapper__check--indeterminate"
      height="2"
      viewBox="0 0 8 2"
      width="8"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Rectangle 11
      </title>
      <path
        d="M0 0h8v2H0z"
        fill="#FFF"
        fillRule="evenodd"
      />
    </svg>
    <svg
      className="hig__checkbox__wrapper__check--disabled"
      height="8"
      viewBox="0 0 10 8"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Group 4
      </title>
      <path
        d="M3.95 7.588L1 4.743l.915-.946 2.02 1.935L8.537 1l.933.928z"
        fill="#D1DDEE"
        fillRule="evenodd"
        stroke="#D1DDEE"
        strokeWidth=".5"
      />
    </svg>
  </span>
  <label
    className="hig__checkbox__label"
    htmlFor="checkbox-1"
  />
</div>
`;
